Fix artwork image clipping.

--- a/data/application.css
+++ b/data/application.css
@@ -34,7 +34,7 @@ buttonbox {
 }
 
 .artwork {
-    background-size: auto 100%;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
